--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,17 @@
 nav{
     display: flex;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(0, 0, 0, 0.7);
     padding: 20px;
+}
+.logo{
+    width: 70px;
+    height: 50px;
+}
+h1{
+    font-family: 'Bebas Neue', cursive;
+    color: #ffffff;
+    font-size: 36px;
+    padding: 9px;
 }
 .home, .menu, .onboarding{
     height: 50px;
@@ -23,4 +33,28 @@ nav{
     padding: 25px;
     text-decoration: none;
     color: #ffffff;
+}
+.menu a:hover{
+    color: #f8ba42;
+}
+.onboarding button{
+    font-family: 'Spartan', sans-serif;
+    font-size: 20px;
+    font-weight: 900;
+    color: #ffffff;
+    padding: 9px 14px;
+    margin: 16px;
+    background: transparent;
+}
+.button1{
+    border: solid #f8ba42 5px;
+}
+.button1:hover{
+    background: #f8ba42;
+}
+.button2{
+    border: solid #dc549c 5px;
+}
+.button2:hover{
+    background: #dc549c;
 }
