--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@ nav{
     display: flex;
     background: rgba(0, 0, 0, 0.7);
     padding: 20px;
+    position: fixed;
+    z-index: 1;
+    width: 100%;
 }
 .logo{
     width: 70px;
@@ -57,4 +60,25 @@ h1{
 }
 .button2:hover{
     background: #dc549c;
+}
+.hero{
+    
+    display: flex; 
+    background-image: url("../images/movementfinal\ 1.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 750px;
+}
+/* .hero{
+    display: flex;
+    justify-content: start;
+    width: 100%;
+    height: 800px;
+    background-image: url("../images/movementfinal\ 1.png");
+    background-repeat: no-repeat;
+    background-position: right;
+} */
+.hero-text{
+
 }
